--- a/css/style.css
+++ b/css/style.css
@@ -10,27 +10,54 @@
 /* CONTAINER */
 .container {
     display: flex;
-    margin: 30px 200px 0;
+    margin: 1.875rem 12.5rem 0;
 }
 
 /* HEADER */
 .dados {
     display: flex;
     align-items: center;
-    margin-bottom: 15px;
+    margin-bottom: .9375rem;
 }
 
 .dados p {
-    font-size: 25px;
+    font-size: 1.5625rem;
     font-weight: 600;
 }
 
 .fa-solid {
-    font-size: 40px;
-    margin-right: 15px;
+    font-size: 2.5rem;
+    margin-right: .9375rem;
 }
 
 header .container {
-    border-bottom: 2px solid lightgray;
-    padding: 0 30px;
+    border-bottom: .125rem solid rgb(0, 0, 0);
+    padding: 0 1.875rem;
 }
+
+.financas {
+    width: 80vw;
+}
+
+
+/* RESUMO */
+.resumo, .proximo-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 30px 0 ;
+}
+
+.resumo p {
+    margin: 0 40px;
+    border: 1px solid #e4e4e4;
+    padding: .9rem .9375rem;
+    border-radius: .4rem;
+    box-shadow: 1px 1px rgb(225, 225, 225);
+    font-size: 20px;
+}
+
+/* PROXIMO ITEM */
+
+
+/* TABELA */
